# bromesh

./: .gitmodules  CLAUDE.md  CMakeLists.txt  README.md
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml
data/rig_specs/: hexapod.json  humanoid.json  octopod.json  quadruped.json
docs/: auto-rig-strategy.md
include/bromesh/: gaussian_splat.h  mesh_data.h
include/bromesh/analysis/: bake.h  bake_texture.h  bake_transfer.h  bbox.h  bvh.h  convex_decomposition.h  intersect.h  raycast.h  sample.h
include/bromesh/animation/: ik.h  locomotion.h  pose.h  retarget.h
include/bromesh/csg/: boolean.h
include/bromesh/io/: fbx.h  gltf.h  obj.h  ply.h  splat_ply.h  stl.h  vox.h
include/bromesh/isosurface/: dual_contouring.h  marching_cubes.h  surface_nets.h  transvoxel.h
include/bromesh/manipulation/: bezier_sweep.h  merge.h  normals.h  poly_mesh.h  polygon.h  remesh.h  repair.h  shrinkwrap.h  simplify.h  skin.h  skin_transfer.h  smooth.h  split_components.h  subdivide.h  sweep.h  transform.h  weld.h
include/bromesh/optimization/: analyze.h  encode.h  meshlets.h  optimize.h  progressive.h  spatial.h  spatial_hash.h  strips.h
include/bromesh/primitives/: par_primitives.h  primitives.h
include/bromesh/procedural/: branches.h  leaf_scatter.h  lsystem.h  lsystem_turtle.h  obstacle_field.h  plants.h  space_colonization.h  vec_math.h
include/bromesh/procedural/plants/: conifer.h  fern.h  grass_tuft.h  plant_result.h  shrub.h  succulent.h  tree.h  vine.h
include/bromesh/reconstruction/: reconstruct.h
include/bromesh/rigging/: auto_rig.h  bbw.h  bone_heat.h  landmark_detect.h  landmarks.h  mesh_laplacian.h  rig_spec.h  skeleton_fit.h  skin_validate.h  voxel_bind.h  weight_smooth.h  weighting.h
include/bromesh/uv/: projection.h  unwrap.h  uv_metrics.h
include/bromesh/voxel/: greedy_mesh.h  voxel_chunk.h
scripts/: coverage.ps1
src/analysis/: bake.cpp  bake_texture.cpp  bake_transfer.cpp  bbox.cpp  bvh.cpp  convex_decomposition.cpp  intersect.cpp  manifold_check.cpp  raycast.cpp  sample.cpp
src/animation/: ik.cpp  locomotion.cpp  pose.cpp  retarget.cpp
src/csg/: boolean.cpp
src/io/: fbx.cpp  gltf.cpp  obj.cpp  ply.cpp  ply_common.h  splat_ply.cpp  stl.cpp  vox.cpp
src/isosurface/: dual_contouring.cpp  marching_cubes.cpp  surface_nets.cpp  transvoxel.cpp
src/manipulation/: bezier_sweep.cpp  merge.cpp  normals.cpp  poly_mesh.cpp  polygon.cpp  remesh.cpp  repair.cpp  shrinkwrap.cpp  simplify.cpp  simplify_attributes.cpp  skin.cpp  skin_transfer.cpp  smooth.cpp  split_components.cpp  subdivide.cpp  sweep.cpp  transform.cpp  weld.cpp
src/optimization/: analyze.cpp  encode.cpp  meshlets.cpp  optimize.cpp  progressive.cpp  spatial.cpp  spatial_hash.cpp  strips.cpp
src/primitives/: par_primitives.cpp  primitives.cpp
src/procedural/: branches.cpp  leaf_scatter.cpp  lsystem.cpp  lsystem_turtle.cpp  obstacle_field.cpp  plants.cpp  space_colonization.cpp
src/procedural/plants/: conifer.cpp  fern.cpp  grass_tuft.cpp  plant_common.h  shrub.cpp  succulent.cpp  tree.cpp  vine.cpp
src/reconstruction/: reconstruct.cpp
src/rigging/: auto_rig.cpp  bbw.cpp  bone_heat.cpp  landmark_detect.cpp  mesh_laplacian.cpp  rig_spec.cpp  skeleton_fit.cpp  skin_validate.cpp  voxel_bind.cpp  weight_smooth.cpp  weighting.cpp
src/uv/: projection.cpp  unwrap.cpp  uv_metrics.cpp
src/voxel/: greedy_mesh.cpp  voxel_chunk.cpp
tests/: CMakeLists.txt  synthetic_rigs.h  test_animation.cpp  test_coverage.cpp  test_coverage2.cpp  test_framework.h  test_main.cpp  test_mesh.cpp  test_procedural.cpp  test_rigging.cpp  test_splat.cpp
